# AoC2023

Day-1/trebuchet/: Cargo.toml
Day-1/trebuchet/src/: main.rs
Day-2/bag-game/: Cargo.toml
Day-2/bag-game/src/: main.rs
Day-3/map-reader/: Cargo.toml
Day-3/map-reader/src/: main.rs
