[package]
name = "bag-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
nom = "7.1.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
test-case = "3.3.1"
